--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version = "0.9" }
+bevy = { version = "0.9.0" }
+bevy-inspector-egui = "0.17.0"
+bevy_editor_pls = "0.2.0"
 rand = "0.8.5"
 
 # Enable a small amount of optimization in debug mode
