--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,6 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.9.0" }
-bevy-inspector-egui = "0.17.0"
-bevy_editor_pls = "0.2.0"
-rand = "0.8.5"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
@@ -18,3 +15,6 @@ opt-level = 1
 # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
 [profile.dev.package."*"]
 opt-level = 3
+
+[target.wasm32-unknown-unknown]
+runner = "wasm-server-runner"
