--- a/trunk.toml
+++ b/trunk.toml
@@ -10,7 +10,7 @@ dist = "web/dist"
 # The public URL from which assets are to be served.
 public_url = "/"
 # Whether to include hash values in the output file names.
-filehash = true
+filehash = false
 
 [watch]
 # Paths to watch. The `build.target`'s parent folder is watched by default.
