--- a/trunk.toml
+++ b/trunk.toml
@@ -4,11 +4,11 @@
 # The index HTML file to drive the bundling process.
 target = "web/index.html"
 # Build in release mode.
-release = false
+release = true
 # The output dir for all final assets.
 dist = "web/dist"
 # The public URL from which assets are to be served.
-public_url = "/"
+# public_url = "/"
 # Whether to include hash values in the output file names.
 filehash = false
 
