Change public_url to /Breakout to support Github Pages

--- a/trunk.toml
+++ b/trunk.toml
@@ -8,7 +8,7 @@ release = true
 # The output dir for all final assets.
 dist = "web/dist"
 # The public URL from which assets are to be served.
-# public_url = "/"
+public_url = "/Breakout/"
 # Whether to include hash values in the output file names.
 filehash = false
 
