--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.9.0" }
+rand = "0.8.5"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
