--- a/trunk.toml
+++ b/trunk.toml
@@ -4,7 +4,7 @@
 # The index HTML file to drive the bundling process.
 target = "web/index.html"
 # Build in release mode.
-release = true
+release = false
 # The output dir for all final assets.
 dist = "web/dist"
 # The public URL from which assets are to be served.
